# darpa-planning

./: .gitignore  CMakeLists.txt  README.md  a.out  demo-main.c  demo.c  kinect_data_show.cpp
astar/: demo.h
footstep-viz/: CMakeLists.txt
footstep_viz/: .footstep_visualizer.cpp.swp  CMakeLists.txt  README.md  footstep_visualization.cpp  footstep_visualizer.cpp  footstep_visualizer.h  main.cpp
live_test/: CMakeLists.txt  main.cpp
mult_cameras/: CMakeLists.txt  main.cpp  synchronized_multiple_kinects.cpp
pcl_path_online_cb/: CMakeLists.txt  demo.c  demo.h  footstep_visualizer.cpp  pcl_path_online_cb.cpp
